--- a/js/test.html
+++ b/js/test.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="library/axios.min.js"></script>
     <script type="text/javascript" src="walletsdk.js"></script>
     <script type="text/javascript">
-        const sdk = new WalletSDK("21444697862578557", "UFvrZDy2u9EBOcY43aHD1vE6v7ABXw4H", "m8V9n9GLzkh3ZKRr")
+        const sdk = new WalletSDK("", "", "")
         function getPlatformAssets(){
             sdk.api.getPlatformAssets().then(value => console.log(value))
         }
